# HustNotification

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_ctsv_api.py  ui_server.py
src/: config.py  main.py
src/monitors/: activity.py  award.py  scholarship.py  sis_timetable.py  timetable.py  training_points.py
src/utils/: ai_analyzer.py  api_fetcher.py  data_tracker.py  email_sender.py
src/web/: dashboard.html
